# seeta-face6-cgo

./: .gitignore  AgePredictor.go  CMakeLists.txt  EyeStateDetector.go  FaceAntiSpoofing.go  FaceDetect.go  FaceLandmarker.go  FaceRecognizer.go  FaceTracker.go  GenderPredictor.go  ImageUtil.go  MaskDetector.go  ModelSetting.go  QualityRule.go  SeetaFaceImage.go  SeetaFaceInfo.go  SeetaPointFs.go  SeetaTrackingFaceInfo.go  Seetaface6CGO.cpp  Utils.go  cgo.go  go.mod  编译说明.md
demo/: imgTest.go
include/: Seetaface6CGO.h
include/seeta/: CTrackingFaceInfo.h
lib/: Seetaface6CGO.def  Seetaface6CGO.lib
scanner/: Controller.go  FaceEngin.go  Scan.go  ginEngine.go  go.mod
scanner/cmd/: scan.go
